# PDF-Unlocker

./: .gitignore  PDFUnlocker.py  PDFUnlocker.rb  README.md  com.rahul286.PDFUnlocker.plist  com.rahul286.pdfunlock.plist  main.py  pdf.py  pyproject.toml  watch.py
PDF Unlocker/: ContentView.swift  PDF_UnlockerApp.swift  PasswordList.swift  SettingsView.swift
PDF Unlocker.xcodeproj/: project.pbxproj
PDF Unlocker.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
PDF Unlocker.xcodeproj/project.xcworkspace/xcuserdata/rahul286.xcuserdatad/: UserInterfaceState.xcuserstate
PDF Unlocker.xcodeproj/xcuserdata/rahul286.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
PDF Unlocker.xcodeproj/xcuserdata/rahul286.xcuserdatad/xcschemes/: xcschememanagement.plist
PDF UnlockerTests/: PDF_UnlockerTests.swift
PDF UnlockerUITests/: PDF_UnlockerUITests.swift  PDF_UnlockerUITestsLaunchTests.swift
